added links to the API subscription page

--- a/src/main/resources/templates/MLBTeams.html
+++ b/src/main/resources/templates/MLBTeams.html
@@ -5,7 +5,7 @@
     <meta th:replace="fragments/headerinc :: head"/>
 </head>
 
-<body background='/images/NBA-Logo.jpg'>
+<body background='/images/MLB-Logo.png'>
 <div class="container">
     <div th:replace="fragments/header :: header"></div>
 
