removed my key from the checked in code

--- a/src/main/resources/templates/MLBTeams.html
+++ b/src/main/resources/templates/MLBTeams.html
@@ -19,7 +19,7 @@
         <option value="2020">2020</option>
     </select>
     <label for="league">League</label>
-    <input type="number" min="1" max="16" id="league">
+    <input type="number" min="1" max="16" value="1"    id="league">
 
     <button onclick='getMLBTeams()'>Get MLB Teams</button>
     <h3>Teams</h3>
