removed my key from the checked in code

--- a/src/main/resources/templates/basketball.html
+++ b/src/main/resources/templates/basketball.html
@@ -140,7 +140,7 @@
         </table>
     </div>
 </div>
-<script src='/js/sports.js'></script>
+<script src='/js/basketball.js'></script>
 </body>
 
 </html>
