--- a/src/main/resources/templates/homes.html
+++ b/src/main/resources/templates/homes.html
@@ -108,7 +108,7 @@
     </table>
     </div>
 </div>
-<script src='/js/realEstate.js'></script>
+<script src='/js/homes.js'></script>
 </body>
 
 </html>
