Now it will request property details for individual properties

--- a/src/main/resources/templates/homes.html
+++ b/src/main/resources/templates/homes.html
@@ -95,7 +95,7 @@
 
     <button onclick='getHomes()'>Find your Dream Home!</button>
 
-    <h3 onclick="getPropertyById()">Homes</h3>
+    <h3>Homes</h3>
     <table class="row">
         <thead>
         <tr>
